--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,10 @@
     "require": {
         "php": "^8.2",
         "filament/filament": "^3.2",
+        "joaopaulolndev/filament-edit-profile": "^1.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "rmsramos/activitylog": "^1.0",
         "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
